--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,31 @@
-front:
-  build: .
-  ports:
-    - "8080:8080"
-  volumes:
-    - ./src:/src
-    - /src/node_modules
-  links:
-    - redis
-redis:
-  image: redis
-  command: redis-server --appendonly yes
-  volumes:
-    - ./data:/data
-mysql:
+services:
+  front:
+    build: .
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./src:/src
+      - /src/node_modules
+    links:
+      - redis
+  redis:
+    image: redis
+    command: redis-server --appendonly yes
+    volumes:
+      - ./data:/data
+  mysql:
     image: mysql
     restart: always
     environment:
-        MYSQL_DATABASE: 'db'
-        MYSQL_USER: 'user'
-        MYSQL_PASSWORD: 'pass'
-        MYSQL_ROOT_PASSWORD: 'pass'
-    ports: 
-        - '3306:3306'
+      MYSQL_DATABASE: "db"
+      MYSQL_USER: "user"
+      MYSQL_PASSWORD: "pass"
+      MYSQL_ROOT_PASSWORD: "pass"
+    ports:
+      - "3306:3306"
     expose:
-        - '3306'
-    
-        
+      - "3306"
+    volumes:
+      - ./src:/docker-entrypoint-initdb.d
+      - ./src:/var/lib/mysql
+
