--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,9 +27,10 @@ services:
       - "3306"
     volumes:
       - ./bdd:/docker-entrypoint-initdb.d
-      - ./bdd:/var/lib/mysql
   php:
     build: ./php/
     ports:
       - "80:80"
+    links:
+      - mysql
 
